Enhance Appwrite integration with database connection checks and testing functionality
- Added a new "test" script in package.json to run Appwrite tests.
- Implemented database connection checking in appwriteHelpers.js to ensure reliable database operations.
- Updated healthCheck.js to utilize the new database connection check.
- Refactored batch update management to handle database connection issues gracefully, re-queuing updates when connections are unavailable.
- Modified index.js to create a batch manager instance with the databases parameter.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "stop": "pm2 stop hazardous-db-bot",
     "restart": "pm2 restart hazardous-db-bot",
     "logs": "pm2 logs hazardous-db-bot",
-    "status": "pm2 status"
+    "status": "pm2 status",
+    "test": "bun run src/utils/testAppwrite.js"
   },
   "dependencies": {
     "discord.js": "^14.16.3",
